--- a/frontend/package.json
+++ b/frontend/package.json
@@ -102,8 +102,8 @@
     "@solana/web3.js": "1",
     "@stackframe/react": "2.8.3",
     "@stripe/firestore-stripe-payments": "0.0.6",
-    "@stripe/react-stripe-js": "2.9.0",
-    "@stripe/stripe-js": "5.0.0",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.0.0",
     "@suiet/wallet-kit": "0.3.3",
     "@supabase/auth-ui-react": "0.4.7",
     "@supabase/auth-ui-shared": "0.1.8",
@@ -181,10 +181,11 @@
     "file-saver": "2.0.5",
     "file-type": "20.1.0",
     "firebase": "10.8.0",
-    "framer-motion": "10.18.0",
+    "framer-motion": "^11.0.3",
     "grapejs": "^2.1.2",
     "grapesjs": "0.22.5",
     "grapesjs-react": "4.0.2",
+    "howler": "^2.2.4",
     "html2canvas": "1.4.1",
     "html2pdf.js": "0.10.3",
     "i18next": "24.2.0",
@@ -300,15 +301,17 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "@firebase/app": "^0.11.1",
     "@sentry/react": "7.101.1",
     "@sentry/types": "7.101.1",
     "@types/amplitude-js": "^8",
     "@types/file-saver": "^2",
     "@types/firebase": "^3.2.1",
+    "@types/howler": "^2.2.11",
     "@types/leaflet": "1.9.14",
     "@types/lodash": "^4",
-    "@types/mapbox-gl": "2.7.20",
     "@types/mapbox__mapbox-gl-draw": "^1",
+    "@types/mapbox-gl": "2.7.20",
     "@types/mixpanel-browser": "^2",
     "@types/node": "20.6.2",
     "@types/novnc__novnc": "^1",
@@ -325,6 +328,7 @@
     "@types/recordrtc": "^5",
     "@types/three": "^0",
     "@types/vinyl-fs": "^3",
+    "@vitejs/plugin-react": "^4.0.0",
     "@vitejs/plugin-react-swc": "3.3.2",
     "autoprefixer": "^10.4.20",
     "dotenv": "16.4.5",
@@ -341,9 +345,7 @@
     "typescript": "5.2.2",
     "typescript-language-server": "4.3.2",
     "vite": "4.4.5",
-    "vite-tsconfig-paths": "4.2.2",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@firebase/app": "^0.11.1"
+    "vite-tsconfig-paths": "4.2.2"
   },
   "packageManager": "yarn@4.0.2",
   "nodeLinker": "pnpm"
