--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,24 @@
   "private": true,
   "packageManager": "npm@10.0.0",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
+    "@supabase/supabase-js": "^2.49.8",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.1",
-    "react-scripts": "5.0.1"
+    "framer-motion": "^12.15.0",
+    "lucide-react": "^0.511.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^6.0.0",
+    "react-router-dom": "^6.18.0",
+    "react-scripts": "^5.0.1",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
+    "zustand": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,14 +42,22 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.27.3",
     "@eslint/js": "9.23.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^10.0.0",
     "eslint": "9.23.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
     "globals": "15.15.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "react-refresh": "^0.17.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^4.9.5"
   }
 }
